@@ -26,7 +26,7 @@
    "prereqs" : {
       "build" : {
          "requires" : {
-            "Alien::libuv" : "0.006",
+            "Alien::libuv" : "1.000",
             "Config" : "0",
             "ExtUtils::MakeMaker" : "7.12"
          }
@@ -56,7 +56,7 @@
       },
       "runtime" : {
          "requires" : {
-            "Alien::libuv" : "0.006",
+            "Alien::libuv" : "1.000",
             "Exporter" : "5.57",
             "XSLoader" : "0.14",
             "perl" : "5.008001",
@@ -69,7 +69,7 @@
             "CPAN::Meta" : "2.120900"
          },
          "requires" : {
-            "Alien::libuv" : "0.006",
+            "Alien::libuv" : "1.000",
             "ExtUtils::MakeMaker" : "7.12",
             "File::Spec" : "0",
             "Test::More" : "0.88"
@@ -79,7 +79,7 @@
    "provides" : {
       "UV::Util" : {
          "file" : "lib/UV/Util.pm",
-         "version" : "0.011"
+         "version" : "1.000"
       }
    },
    "release_status" : "stable",
@@ -94,7 +94,7 @@
          "web" : "https://github.com/genio/p5-UV-Util"
       }
    },
-   "version" : "0.011",
+   "version" : "1.000",
    "x_Dist_Zilla" : {
       "perl" : {
          "version" : "5.026001"
@@ -161,7 +161,7 @@
                },
                "Dist::Zilla::Role::ModuleMetadata" : {
                   "Module::Metadata" : "1.000033",
-                  "version" : "0.004"
+                  "version" : "0.005"
                }
             },
             "name" : "@Starter/MetaProvides::Package",
@@ -321,7 +321,7 @@
                },
                "Dist::Zilla::Role::ModuleMetadata" : {
                   "Module::Metadata" : "1.000033",
-                  "version" : "0.004"
+                  "version" : "0.005"
                }
             },
             "name" : "MetaProvides::Package",
@@ -336,7 +336,7 @@
             "class" : "Dist::Zilla::Plugin::Git::Contributors",
             "config" : {
                "Dist::Zilla::Plugin::Git::Contributors" : {
-                  "git_version" : "2.16.2",
+                  "git_version" : "2.14.1",
                   "include_authors" : 0,
                   "include_releaser" : 1,
                   "order_by" : "name",
@@ -366,7 +366,7 @@
                   "changelog" : "Changes"
                },
                "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.16.2",
+                  "git_version" : "2.14.1",
                   "repo_root" : "."
                }
             },
@@ -389,7 +389,7 @@
                   "changelog" : "Changes"
                },
                "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.16.2",
+                  "git_version" : "2.14.1",
                   "repo_root" : "."
                },
                "Dist::Zilla::Role::Git::StringFormatter" : {
@@ -406,12 +406,12 @@
                   "branch" : null,
                   "changelog" : "Changes",
                   "signed" : 0,
-                  "tag" : "v0.011",
+                  "tag" : "v1.000",
                   "tag_format" : "v%v",
                   "tag_message" : "v%v"
                },
                "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.16.2",
+                  "git_version" : "2.14.1",
                   "repo_root" : "."
                },
                "Dist::Zilla::Role::Git::StringFormatter" : {
@@ -431,7 +431,7 @@
                   "remotes_must_exist" : 1
                },
                "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.16.2",
+                  "git_version" : "2.14.1",
                   "repo_root" : "."
                }
             },
