@@ -1,6 +1,9 @@
 Revision history for Perl extension {{$dist->name}}
 
 {{$NEXT}}
+    - Update to use the cleaned up version of Alien::libuv
+    - Remove the build complexity for windows as that's in Alien::libuv now
+    - Bump the major version to 1.000 to coincide with the Alien::libuv change.
 
 0.010     2018-04-03
     - Update the tests to pass on cygwin.
